Fix code display whitespace

--- a/html/stylesheets/src/elements/_code.scss
+++ b/html/stylesheets/src/elements/_code.scss
@@ -26,7 +26,7 @@ pre.code code{
 }
 
 :not(pre) > code[class*="language-"],
-.text code{
+.text > code{
   background: $c_main_highlight_bg;
   padding: 0.2em 0.5em;
   white-space: normal;
